2001-01-29  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (hide): new helper function
	(data_destroy): ditto
	(focus_out_event): new signal handler
	(destroy): ditto
	(gtk_html_isearch): don't destroy input line, hide instead, store
	data in input line widget data

	* gtkhtml-private.h: added search_input_line

2001-01-29  Larry Ewing  <lewing@ximian.com>

	* htmltable.c (html_table_init): remove reference to refcount.
	Remove unused link/unlink funtions.

	* htmltablecell.h: remove unused refcount member.  Remore
	link/unlink prototypes.

	* htmltable.c (set_cell): remove useless call to
	html_table_cell_link.

2001-01-29  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (destroy): reversed order of walk thru table as we
	don't want access freed memory

	* htmlengine.c (html_engine_add_object_with_id): strdup key only
	if it's a new one, else pass old_key (take a look in glib sources
	if you don't beleive it's right :)

2001-01-26  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (html_clueflow_spell_check): draw spelled range
	only if engine isn't frozen

	* htmlengine.c (parse_table): don't ignore nowrap

2001-01-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (html_engine_insert_text): don't
	do spell check yourself and rather pass check param to
	insert_object

2001-01-25  Radek Doulik  <rodo@helixcode.com>

	* gtkhtml.c (gtk_html_new): added doc comment to test doc stuff
	(gtk_html_new_from_string): added new constructor

	* gtkhtml-stream.h (gtk_html_stream_unref): moved
	gtk_html_stream_ref, gtk_html_stream_unref from gtkhtml.h

	* htmltablecell.c (calc_size): new method, take care of fixed
	height
	(clue_move_children): new helper function
	(html_table_cell_set_fixed_height): new function

	* htmlengine.c (parse_table): support <td height=[number]>

	* htmltablecell.c (html_table_cell_init): added fixed_height

2001-01-25  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (html_image_pointer_timeout): only queue a redraw if