@@ -1,3 +1,9 @@
+2001-01-29  Larry Ewing  <lewing@ximian.com>
+
+	* htmlengine.c (html_engine_begin): call html_engine_id_table_clear.
+	(html_engine_id_table_clear): move the table reset functions to a
+	helper funtion.
+
 2001-01-29  Radek Doulik  <rodo@ximian.com>
 
 	* gtkhtml-search.c (hide): new helper function
